tests/error/unresolved_type_in_struct_in_function_declaration.c
// fail "Undeclared identifier."
int (*a)(struct{struct unresolved a});
